Unreal 4 Elemental and MatineeFightScene demos misrender
@kwg
Submitted by Kenneth Graunke Assigned to Intel 3D Bugs Mailing List
Link to original bug (#111636)
Description
Unreal 4's Elemental demo misrenders on iris - a bunch of the geometry goes haywire. I am not sure why yet.
https://wiki.unrealengine.com/Linux_Demos
Version: git